# agent-token-ledger

./: .gitignore  README.md  pyproject.toml
docs/: AUTO_GRILL.md  DESIGN.md  FOOTER_EMISSION_GRILL.md  LLM_FOOTER_RULE.md  LOCAL_LLM_ADOPTION_EVALUATION.md  LOCAL_REBUTTER_ABLATION.md  LOCAL_VALIDATION.md  RULE_GAP_ANALYSIS.md
examples/: ollama_multi_agent.py
scripts/: auto_grill.py  rebutter_ablation.py
src/agent_token_ledger/: __init__.py  cli.py  models.py  ollama.py  otel.py  recorder.py  report.py
tests/: test_attribution.py  test_concurrency.py  test_footer.py  test_otel.py  test_usage.py
